[tool.poetry]
name = "ai4neb"
version = "0.2.11"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
tensorflow = "^2.9.0"
xgboost = "^1.6.1"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
